--- a/formelark.tex
+++ b/formelark.tex
@@ -40,6 +40,9 @@ $$\Delta =\frac{Q}{T}$$
 Blandingsentropi:
 $$\Delta S_{\text{mixing}}=k\ln\binom{N}{N_A}$$
 
+\section{Differensialer}
+$$\frac{1}{T}\equiv\bigg(\frac{\partial S}{\partial U}\bigg)_{N,V}$$
+
 \section{Utledninger}
 ...
 
